kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dropship-ingress
  namespace: dropship
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: catalog-service
            port:
              number: 8081
      - pathType: Prefix
        path: /
        backend:
          service:
            name: storefront-ui
            port: 
              number: 80
